# boids-sim

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
apps/: CMakeLists.txt  demo.cpp  main.cpp
boids/: BoidManager.cpp  BoidManager.hpp  CMakeLists.txt  GridWorld.cpp  GridWorld.hpp  boids.cpp  boids.hpp  game.cpp  game.hpp
cmake/: Dependencies.cmake
dotfiles/: .bash_aliases  .bash_functions  .bashrc
greeter/: CMakeLists.txt  greeter.cpp  greeter.hpp
